--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,68 @@
 
+  
   body {
     background-color: white;
     background: url(../img/bakgrund.png) 100% ;
-    height: 150%;
+    background-repeat: no-repeat;
   }
 
-  .container{
-  	
-  
-  	
-  }
+
 
  li{
- 	position: right;
+  position: right;
 
  } 
- .col-md-4{
- 	margin-left: 40%;
- }
+ 
 
 
 .circular {
-	width: 210px;
-	height: 200px;
-	border-radius: 150px;
-	-webkit-border-radius: 150px;
-	-moz-border-radius: 150px;
-	position: absolute;
-	 z-index: 2;
-	 margin-top: 80px;
-	
-	
-	}
+  width: 210px;
+  height: 200px;
+  border-radius: 150px;
+  -webkit-border-radius: 150px;
+  -moz-border-radius: 150px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+   z-index: 2;
+   margin-top: 70px;
+  
+  
+  }
 .navbar{
   position: fixed;
     left: 0;
     top: 0;
     
     width:100%;
-   opacity: 0.6;
+   opacity: 0.85;
    z-index: 3;
 
 
 }
 
 .jumbotron{
-	background-color: #ffffff;
-    position: relative; 
-    width: 180%; 
-	right: 60%;
-    opacity: 0.6;
+  background-color: #ffffff;
+    opacity: 0.85;
     z-index: 1;
-	margin-top: 300px;
-	padding: 10px;
-	
-
-   
+  padding: 10px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    width: 70%;
+    margin-top: 20px;
 }
 
+.skills{
+  background-color: #ffffff;
+    opacity: 0.85;
+    z-index: 1;
+  padding: 10px;
+  display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    width: 100%;
+    margin-top: 20px;
+}
 
 
