--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,15 @@
   
   body {
     background-color: white;
-    background: url(../img/bakgrund.png) 100% ;
-    background-repeat: no-repeat;
+    
   }
 
+.container-fluid{
+    background: url(../img/bakgrund.png) 100% ;
+    background-repeat: no-repeat;
+    
 
+}
 
  li{
   position: right;
@@ -58,15 +62,19 @@
     opacity: 0.85;
     z-index: 1;
   padding: 10px;
-  display: block;
-    margin-left: auto;
-    margin-right: auto; 
-    width: 100%;
+    width: 90%;
     margin-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;  
 }
 
 .glyphicon{
     font-size: 30px;
     color: black;
+    float: right;
+    margin-top: 5px;
 
 }
+
+
