--- a/css/main.css
+++ b/css/main.css
@@ -4,15 +4,18 @@ html {
 }
 
 body {
-    background-color: white;
-    background: url(../img/bakgrund.png) 100%;
-    background-repeat: no-repeat;
-    min-height: 100%;
-    background-size: cover;
+    background-color: #fffae2;
+   
 }
 
 li {
     position: right;
+}
+
+.container-fluid {
+    background: url(../img/wallpaper.jpg) 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .circular {
@@ -30,7 +33,7 @@ li {
 .navbar {
     border-radius: 0px 0px 7px 7px;
     color: black;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: white;
 }
 
 .jumbotron {
@@ -41,11 +44,12 @@ li {
     margin-left: auto;
     margin-right: auto;
     width: 93%;
-    margin-top: 80px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.85);
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 }
-
 .box {
     background-color: #ffffff;
     z-index: 1;
@@ -56,18 +60,18 @@ li {
     margin-left: auto;
     margin-right: auto;
     border-radius: 7px;
-    background-color: rgba(255, 255, 255, 0.85);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 }
-
 .glyphicon {
     font-size: 30px;
-    color: #ffba7f;
+    color: #bf5675;
 }
-
 .marginrow {
     margin-top: 50px;
 }
-
+.rubrik {
+    float: left;
+}
 .kontakt {
     background-color: #ffffff;
     z-index: 1;
@@ -78,28 +82,38 @@ li {
     margin-left: auto;
     margin-right: auto;
     border-radius: 7px;
-    text-align: center;
-    background-color: rgba(255, 255, 255, 0.85);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 }
-
 a {
     text-decoration: none;
     color: black;
 }
-
+.btn:link,
+.btn:visited {
+    background-color: #bf5675;
+    color: white;
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 7px;
+}
+.btn:hover,
+.btn:active {
+    background-color: #d3728f;
+}
+.btn {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
 a:hover {
     text-decoration: none;
     color: black;
 }
 
-.email {
-    float left;
+.symboler {
+    text-align: center;
 }
-
-.profil {
-    float: right;
-}
-
 .icon {
     display: inline-block;
     vertical-align: top;
@@ -107,28 +121,23 @@ a:hover {
     margin-right: 10px;
     width: 40px;
 }
-
 .text {
     display: inline-block;
     width: 60%;
 }
-
 .bild {
     width: 100%;
+    margin-top: 25px;
 }
-
 #om {
-    padding-top: 50px
+    padding-top: 50px;
 }
-
 #fardigheter {
-    padding-top: 50px
+    padding-top: 50px;
 }
-
 #portfolio {
-    padding-top: 50px
+    padding-top: 50px;
 }
-
 #kontakt {
-    padding-top: 50px
+    padding-top: 50px;
 }
